feat: expose plugin rubrics via api
